--- a/package.xml
+++ b/package.xml
@@ -7,6 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
+  <maintainer email="j.galvezserna@qut.edu.au">dennis</maintainer>
   <maintainer email="dennis@todo.todo">dennis</maintainer>
 
 
